--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "build": "prisma generate",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.10.0",
