Fix Vercel deployment & add multi-database support
-  Fix Vercel serverless function configuration
-  Add proper routing for Vercel deployment
-  Switch from Supabase to Neon PostgreSQL database
-  Add database connection debugging tools
-  Add multiple database provider examples (Neon, PlanetScale, Railway, etc)
-  Add deployment readiness checker
-  Fix environment variables handling
-  Update deployment documentation for Vercel
-  Add API test and health check endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,10 @@
   "builds": [
     {
       "src": "server.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["prisma/schema.prisma"]
+      }
     }
   ],
   "routes": [
@@ -16,13 +15,21 @@
       "dest": "/server.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/(.*\\.(css|js|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
       "dest": "/public/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/server.js"
     }
   ],
   "env": {
-    "DATABASE_URL": "@database_url",
-    "SESSION_SECRET": "@session_secret",
-    "ADMIN_PASSWORD_HASH": "@admin_password_hash"
+    "NODE_ENV": "production",
+    "VERCEL": "1"
+  },
+  "functions": {
+    "server.js": {
+      "maxDuration": 30
+    }
   }
 }
