--- a/package.json
+++ b/package.json
@@ -7,14 +7,8 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "build": "prisma generate",
-    "postinstall": "prisma generate",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "db:setup": "node scripts/setup-db.js",
-    "db:test": "node scripts/test-db.js",
-    "vercel-build": "prisma generate && prisma db push"
+    "postinstall": "prisma generate"
+
   },
   "dependencies": {
     "@prisma/client": "^6.10.0",
