Fix Vercel static file serving - add @vercel/static build for public files

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
       "config": {
         "includeFiles": ["prisma/schema.prisma"]
       }
+    },
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
